fix style on firefox + minify css

--- a/static/style.css
+++ b/static/style.css
@@ -23,7 +23,7 @@
 }
 
 .typography {
-  & blockquote, dd, dl, figure, h1, h2, h3, h4, h5, h6, hr, p, pre {
+  & blockquote, & dd, & dl, & figure, & h1, & h2, & h3, & h4, & h5, & h6, & hr, & p, & pre {
     margin: 0;
   }
 
